[package]
name = "yewdux_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
js-sys = "0.3.61"
yewdux = "0.9.2"
[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlInputElement",
]
